--- a/smallscreen.css
+++ b/smallscreen.css
@@ -17,17 +17,16 @@ h1 {
   color: #FFFBFE;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 h3 {
-  font-size: 1.05rem;
+  font-size: 0.8rem;
 }
 h4 {
-  font-size: 0.875rem;
+  font-size: 0.675em;
 }
 p {
   margin-bottom: 1.25rem;
-  color: var(--clr-grey-5);
 }
 
 nav {
@@ -38,7 +37,7 @@ nav {
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  min-height: 8vh;
+  height: 10vh;
   background-color: #3066BE;
 }
 
@@ -85,26 +84,32 @@ nav {
 }
 
 .banner {
-  margin-top: 5em;
+  margin-top: 10vh;
   background: linear-gradient(
     rgba(0, 0, 0, 0.05), 
     rgba(0, 0, 0, 0.35)
   ), url("/img/hero-image2.jpg") no-repeat center center fixed;
   background-size: cover;
-  
   width: 100%;
-  height: 66vh;
+  height: 24em;
 }
 
 .banner h1 {
   line-height: 1em;
   margin-bottom: 0.3em;
+  font-size: 2em;
+}
+
+.banner p {
+  font-size: 0.8em;
+  align-items: center;
 }
 
 .banner-content {
   color: #FFFBFE;
-  padding-top: 12em;
-  width: 80%;
+  padding-top: 10vh;
+  width: 80vw;
+  
 }
 
 .separator {
@@ -121,11 +126,10 @@ nav {
     height: 92vh;
     top: 10vh;
     background-color: #071013;
-    opacity: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    width: 100vw;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
@@ -151,11 +155,6 @@ body {
 
 .title h2 {
   text-align: center;
-}
-
-
-.section {
-  padding: 5rem 0;
 }
 
 .btn {
@@ -204,7 +203,7 @@ body {
 }
 
 .paket-text {
-  padding: 1rem 0 1.5rem 0;
+  padding: 1rem 0 0 0;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   
 }
@@ -229,13 +228,18 @@ body {
   background: #FFFBFE;
   border-radius: 0.5rem;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  padding: 2rem;
-  margin: 1rem 1rem;
-  min-width: 300px;
-  width: 45%;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  width: 95vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.negara p {
+  font-size: 0.7em;
+  margin-left: auto;
+  margin-right: 5em;
 }
 
 .negara-btn {
@@ -271,7 +275,7 @@ body {
 .container {
   max-width: 80%;
   margin: 0 auto;
-  padding: 0 1.5em;
+  padding: 0 auto;
 }
 
 .cart-column {
@@ -284,19 +288,20 @@ body {
 
 .cart-row {
   display: flex;
-  width: 450px;
+  align-items: center;
+  margin: 5px auto;
+  width: 95%;
   background-color: #FFFBFE;
-  margin-bottom: 10px;
   border-radius: 0.5em;
 }
 
 .cart-item {
-  width: 45%;
+  width: 40%;
 }
 
 .cart-price {
-  width: 20%;
-  font-size: 1em;
+  width: 15%;
+  font-size: 0.8em;
   color: #3066BE;
 }
 
@@ -307,8 +312,8 @@ body {
 .cart-item-title {
   color: #071013;
   margin-left: 2em;
-  font-size: 1em;
-  font-weight: 700;
+  font-size: 0.8em;
+  font-weight: 800;
 }
 
 .btn-danger {
@@ -340,20 +345,20 @@ body {
 .cart-total-title {
   color: #FFFBFE;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 1em;
   margin-right: 20px;
 }
 
 .cart-total-price {
   color: #FFFBFE;
   margin-top: 15px;
-  font-size: 1.6em;
+  font-size: 1em;
 }
 
 .btn-purchase {
   display: block;
-  margin: 40px auto 120px auto;
-  font-size: 1em;
+  margin: 30px auto 120px auto;
+  font-size: 0.8em;
 }
 
 .btn-primary {
