--- a/widescreen.css
+++ b/widescreen.css
@@ -37,7 +37,7 @@ nav {
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  min-height: 8vh;
+  height: 12vh;
   background-color: #3066BE;
 }
 
@@ -49,14 +49,6 @@ nav {
   text-transform: uppercase;
   letter-spacing: 5px;
   font-size: 20px;
-}
-
-.cart {
-  display: flex;
-  justify-content: flex-start;
-  width: 40%;
-  padding-top: 0px;
-  overflow: scroll;
 }
 
 .cart li {
@@ -110,18 +102,20 @@ nav {
   margin-top: 200px;
 }
 
-  body {
-    overflow-x: hidden;  
-  }
+body {
+  overflow-x: hidden;  
+}
 
   .cart {
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 0px;
+    overflow: scroll;
     position: absolute;
     right: 0px;
     height: 92vh;
-    top: 10vh;
+    top: 12vh;
     background-color: #071013;
-    opacity: 1;
-    display: flex;
     flex-direction: column;
     align-items: center;
     width: 500px;
