slider belom jadi

--- a/widescreen.css
+++ b/widescreen.css
@@ -75,6 +75,161 @@ nav {
   color: #DB5461;
 }
 
+.slider {
+  position: relative;
+  overflow: hidden;
+  height: 66vh;
+  width: 100vw;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.slide.current {
+  opacity: 1;
+}
+
+.slide .content {
+  position: absolute;
+  bottom: 70px;
+  left: -600px;
+}
+
+.slide:first-child {
+  /* background-color: black; */
+  background: url("./img/slider1.jpg") no-repeat center center/cover;
+}
+
+.slide:nth-child() {
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.05), 
+    rgba(0, 0, 0, 0.35)
+  ), url("/img/slider2.jpg") no-repeat center top/cover;
+}
+
+.slide:nth-child() {
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.05), 
+    rgba(0, 0, 0, 0.35)
+  ), url("/img/slider3.jpg") no-repeat center top/cover;
+}
+
+.slide:nth-child() {
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.05), 
+    rgba(0, 0, 0, 0.35)
+  ), url("/img/slider4.jpg") no-repeat center top/cover;
+}
+
+/* .slider {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #071013;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 500%;
+  height:500px;
+  display: flex;
+}
+
+.slides input {
+  display: none;
+}
+
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img {
+  width: 100%;
+  ali
+}
+
+.navigation-manual  {
+  position: absolute;
+  width: 100%;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #3066BE;
+  background-color: #071013;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background: #071013;
+}
+
+#radio1:checked ~ .first{
+  margin-left: 0;
+}
+#radio2:checked ~ .first{
+  margin-left: -20%;
+}
+#radio3:checked ~ .first{
+  margin-left: -40%;
+}
+#radio4:checked ~ .first{
+  margin-left: -60%;
+}
+
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 800px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div{
+  border: 2px solid #071013;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child){
+  margin-right: 40px;
+}
+
+#radio1:checked ~.navigation-auto .auto-btn1 {
+  background: #071013;
+}
+#radio2:checked ~.navigation-auto .auto-btn2 {
+  background: #071013;
+}
+#radio3:checked ~.navigation-auto .auto-btn3 {
+  background: #071013;
+}
+#radio4:checked ~.navigation-auto .auto-btn4 {
+  background: #071013;
+} */
+
+
 .banner {
   margin-top: 5em;
   background: linear-gradient(
@@ -106,27 +261,27 @@ body {
   overflow-x: hidden;  
 }
 
-  .cart {
-    display: flex;
-    justify-content: flex-start;
-    padding-top: 0px;
-    overflow: scroll;
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 12vh;
-    background-color: #071013;
-    flex-direction: column;
-    align-items: center;
-    width: 500px;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
-
-  .cart .title {
-    color: #FFFBFE;
-    margin-top: 100px;
-  }
+.cart {
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 0px;
+  overflow: scroll;
+  position: absolute;
+  height: 92vh;
+  right: 0px;
+  top: 12vh;
+  background-color: #071013;
+  flex-direction: column;
+  align-items: center;
+  width: 500px;
+  transform: translateX(100%);
+  transition: transform 0.5s ease-in;
+}
+  
+.cart .title {
+  color: #FFFBFE;
+  margin-top: 100px;
+}
 
 .cart-active {
   transform: translateX(0%);
